<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="24dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/alertHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/choose_photo_from"
        android:textAppearance="@style/header"
        android:textColor="@color/purple"
        android:gravity="center_horizontal"
        />

    <ImageButton
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/alertHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="58dp"
        android:layout_marginBottom="48dp"
        android:background="@color/white"
        android:src="@drawable/photo_gallery"
        android:contentDescription="@string/gallery_icon"/>

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/alertHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="48dp"
        android:background="@color/white"
        android:scaleType="center"
        android:src="@drawable/camera"
        android:contentDescription="@string/camera_icon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/galleryButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="54dp"
        android:text="@string/gallery"
        android:textAppearance="@style/reviewBody"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cameraButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="54dp"
        android:text="@string/camera"
        android:textAppearance="@style/reviewBody"
        />

</androidx.constraintlayout.widget.ConstraintLayout>