<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.ShowsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/profileButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/placeholder_profile_picture"
                android:contentDescription="@string/logout_button"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAppearance="@style/shows_list_title"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/shows_list_item"
        />

    <ImageView
        android:id="@+id/emptyListIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:src="@drawable/empty_space_icon"
        android:contentDescription="@string/empty_list_icon_description"/>

    <TextView
        android:id="@+id/emptyListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/empty_show_list_text"
        android:textAppearance="@style/empty_space"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loadShowsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/purple"
        android:text="@string/load_shows_button_text"
        app:cornerRadius="24dp"
        />
</LinearLayout>