<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ShowsActivity"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAppearance="@style/shows_list_title"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/shows_list_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
        <ImageView
            android:id="@+id/emptyListIcon"
            android:layout_marginTop="128dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_space_icon"
            android:layout_gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/empty_list_icon_description"/>
        <TextView
            android:id="@+id/emptyListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/empty_show_list_text"
            android:textAppearance="@style/empty_space"
            android:layout_gravity="center_vertical|center_horizontal"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loadShowsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:backgroundTint="@color/purple"
            app:cornerRadius="24dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="24dp"
            android:text="@string/load_shows_button_text"
            />
</LinearLayout>