<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/reviewAuthorProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_profile_placeholder"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toTopOf="@id/reviewBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/reviewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/reviewAuthor"
        app:layout_constraintStart_toEndOf="@id/reviewAuthorProfilePicture"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/placeholder_review_author"
        />

    <TextView
        android:id="@+id/reviewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginVertical="32dp"
        android:textAppearance="@style/reviewAuthor"
        app:drawableEndCompat="@drawable/star_full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="4"
        />

    <TextView
        android:id="@+id/reviewBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="24dp"
        android:textAppearance="@style/reviewBody"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reviewAuthor"
        tools:text="@string/placeholder_review"
        />
</androidx.constraintlayout.widget.ConstraintLayout>